--- a/EFCodeFirstTest/EFCodeFirst/EFCodeFirst.csproj
+++ b/EFCodeFirstTest/EFCodeFirst/EFCodeFirst.csproj
@@ -61,6 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DContext.cs" />
+    <Compile Include="EFEntityTypeConfiguration\CityConfiguration.cs" />
+    <Compile Include="EFEntityTypeConfiguration\ProviceConfiguration.cs" />
     <Compile Include="Entity\AccountUser.cs" />
     <Compile Include="Entity\City.cs" />
     <Compile Include="Entity\Provice.cs" />
@@ -71,9 +73,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="EFEntityTypeConfiguration\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
