--- a/EFCodeFirstTest/EFCodeFirst/App.config
+++ b/EFCodeFirstTest/EFCodeFirst/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MyContext" connectionString="Data Source=localhost;port=3306;Initial Catalog=test;user id=root;password=cp2290812;" providerName="MySql.Data.MySqlClient" />
+    <add name="MyContext" connectionString="Data Source=localhost;port=3306;Initial Catalog=test;user id=root;password=xxx;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
